API's Iniciado y comentado

--- a/src/views/product/create.ejs
+++ b/src/views/product/create.ejs
@@ -24,17 +24,13 @@
                         <input type="text" id="price" name="price" placeholder="Ej: 5678" class="form-input">
                     </div>
                     <div >
-                        <label for="discount" class="form-label">Descuento:</label>
-                        <input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
-                    </div>
-                    <div >
                         <label for="category" class="form-label">Categoría:</label>
                         <select name="category" id="category" class="form-input">
                             <option value="">Elegí</option>
-                            <option value="category">Color</option>
-                            <option value="category">Styling</option>
-                            <option value="category">Care</option>
-                            <option value="category">Barber</option>
+                            <option value="color">Color</option>
+                            <option value="styling">Styling</option>
+                            <option value="care">Care</option>
+                            <option value="barber">Barber</option>
                         </select>
                     </div>
                     <div >
