--- a/src/views/user/cart.ejs
+++ b/src/views/user/cart.ejs
@@ -9,7 +9,7 @@
     <body>
 
         <%- include('../partials/header') %>
-        <h2 class="titulo">Tu carrito de Compras</h2>
+        <h2 class="titulo">Tu carrito de Compras V 1.0</h2>
             <main class="main-cart">
                 <section>
                     <div class="product-img"><img src="/public/images/products/serum.jpg"></div>
