--- a/src/views/user/profile.ejs
+++ b/src/views/user/profile.ejs
@@ -17,7 +17,7 @@
 
           <div class="leftBox">
             <div class="avatar">Imagen
-              <img src="/public/images/avatars/chiru.png">
+              <img src="/public/images/Demo.jpg">
             </div>
             
           </div>
@@ -56,8 +56,7 @@
 
                 <div class="botones">
                     <button class="boton1" type="submit">Editar</button>
-                    <button class="boton2" type="reset">Borrar</button>
-                </div>
+                    </div>
                 </form>
 
             </div>
