--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,7 +24,7 @@
                                 <li><a href="/user/profile">Perfil</a></li>
                                 <li><a href="/product/create">Crear producto</a></li>
                                 <li><a href="/product/delete">Editar producto</a></li>
-                                <li><a href="/logout/">Cerrar Sesion</a></li>
+                                <li><a href="/">Cerrar Sesion</a></li>
                             </ul>
                             </li>
                         <% } %>
